# emailbot

./: README.md  app.py  pyproject.toml
emailbot/: CustomDicts.py  GmailIMAPFetcher.py  Gmailer.py  GoogleSheetUpdater.py  IO.py  LazyDicts.py  LinkedInBot.py  LinkedInJob.py  debugging.py  seq.py  utilities.py
