[tool.poetry]
name = "emailbot"
version = "0.1.0"
description = ""
authors = ["Greg Conan <gregmconan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^44.0.0"
oauth2 = "^1.9.0.post1"
beautifulsoup4 = "^4.12.3"
selenium = "^4.28.1"
webdriver-manager = "^4.0.2"
pathvalidate = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
